<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenXC Caravan Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="existing_caravan">Join An Existing Caravan</string>
    <string name="new_caravan">Create A New Caravan</string>
    <string name="welcome">Welcome!</string>
    <string name="or">or</string>
    <string name="send_host_message">Send Host Message</string>
    <string name="send_member_message">Send Member Message</string>
    <string name="save">Save</string>
    <string name="vehicle_name">New Vehicle</string>
    <string name="host_button_text">Host</string>
    <string name="member_button_text">Member</string>
    <string name="title_activity_master">MasterActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Main</string>
    <string name="title_section2">Messaging</string>
    <string name="title_section3">Polls</string>
    <string name="title_section4">Settings</string>
    <string name="automatic_headlights">Auto Headlights</string>
    <string name="rain_sensing_wipers">Auto Wipers</string>

</resources>
