<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vehicle_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context="com.openxc.openxccaravan.VehicleDetails">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:id="@+id/TitleRow">

        <TextView
            android:text="Enter Vehicle Details Below"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_details_title"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:layout_gravity="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:id="@+id/VehicleNameRow">

        <TextView
            android:text="Vehicle Name:"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_name_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/vehicle_name"
            android:ems="10"
            android:id="@+id/vehicle_name"
            android:layout_width="0dp"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:id="@+id/ModelYearRow">

        <TextView
            android:text="Model Year:"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_year_label"
            android:textSize="16sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:id="@+id/vehicle_year"
            android:maxLines="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:id="@+id/MakeModelRow">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/vehicle_make" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:id="@+id/vehicle_model" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:id="@+id/PassengersRow">

        <TextView
            android:text="Passenger Count:"
            android:layout_weight=".8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/num_passengers_label"
            android:textSize="16sp" />

        <EditText
            android:layout_weight=".2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="2"
            android:id="@+id/num_passengers"
            android:maxLines="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:id="@+id/EquipmentLabelRow">

        <TextView
            android:text="Is this vehicle equipped with.."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/equipment_title"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:id="@+id/EquipmentRow"
        android:layout_weight="1">

        <CheckBox
            android:text="@string/rain_sensing_wipers"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/wiper_checkbox" />

        <CheckBox
            android:text="@string/automatic_headlights"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/headlight_checkbox" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:id="@+id/SaveButtonRow">

        <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_vehicle_button"
            android:onClick="SaveVehicle" />
    </TableRow>

</TableLayout>
